“修正済み” test(controller): StudentControllerTestを分割し設計/可読性を改善
- テストを責務ごとに分割
  - ControllerTestBase（共通のMockMvc/ObjectMapper/固定ID/ヘルパ）
  - StudentControllerSuccessTest（正常系）
  - StudentControllerValidationTest（バリデーション/型不一致など）
  - StudentControllerErrorHandlerTest（例外ハンドラ）
- 内部API依存の削除: jdk.internal.classfile.impl.* の toJson を排除し、
  ObjectMapper に統一（postJsonヘルパ追加）
- import競合の修正: MockMvcRequestBuilders.post を明示し、reactiveの
  MockServerHttpRequest.post との干渉を排除
- 期待レスポンスのキー揺れを統一: errorType→error / errorCode→code（文字列）
- IDデコードの差異に追随: PUTは decodeUuidOrThrow、PATCH/DELETE/restore は
  decodeBase64 を前提にテストを修正
- 部分更新(PATCH)の動作に合わせ、コース更新後は再取得する前提で検証
- 条件付きログ出力 maybePrint を導入（DEBUG_* 環境変数/システムプロパティでON）
- 不要な重複/print出力を削除、共通ビルダー/アサートをBaseへ集約
- テストの命名・日本語Javadocを整理し意図を明確化